@@ -37,16 +37,17 @@ const LMS_INITIAL_SEARCH_RESULTS = 10;
 const LMS_SAVE_QUEUE_KEYBOARD = "S";
 const LMS_CLEAR_QUEUE_KEYBOARD = "X";
 const LMS_QUEUE_ADD_URL_KEYBOARD = "U";
-const LMS_SCROLL_QUEUE_KEYBOARD = "L";
+const LMS_SCROLL_QUEUE_KEYBOARD = "T";
 const LMS_MOVE_QUEUE_KEYBOARD = "M";
 const LMS_SETTINGS_KEYBOARD = "G";
 const LMS_PLAYER_SETTINGS_KEYBOARD = "P";
+const LMS_SERVER_SETTINGS_KEYBOARD = "E";
 const LMS_INFORMATION_KEYBOARD = "I";
 const LMS_MANAGEPLAYERS_KEYBOARD = "A";
 const LMS_SYNC_KEYBOARD = "B";
 const LMS_TRACK_INFO_KEYBOARD = "D";
 const LMS_SEARCH_KEYBOARD = "F";
-const LMS_EXPAND_NP_KEYBOARD = "E";
+const LMS_EXPAND_NP_KEYBOARD = "E"; // +shift
 const LMS_PLAY_KEYBOARD = "P"; // + shift
 const LMS_APPEND_KEYBOARD = "A"; // + shift
 const LMS_ADD_ITEM_ACTION_KEYBOARD = "C";
