@@ -243,7 +243,6 @@
 "Select the player you wish to move the queue to:":"Wähle den Player, auf welchen du die Warteschlange übertragen willst:",
 "Select which players you would like to synchronise with '%1'.":"Wähle, mit welchen Geräten du synchronisieren willst",
 "Selected Genres":"Gewählte Stilrichtungen",
-"Server Settings":"Server-Einstellungen",
 "Server connection lost...":"Verbindung zum Server unterbrochen...",
 "Server is being restarted.":"Der Server wird neu gestartet",
 "Server settings":"Server-Einstellungen",
