@@ -264,7 +264,6 @@
 "Select which players you would like to synchronise with '%1'.":"",
 "Selected Genres":"",
 "Server":"",
-"Server Settings":"",
 "Server connection lost...":"",
 "Server is being restarted.":"",
 "Server settings":"",
