@@ -217,7 +217,6 @@
 "Select which players you would like to synchronise with '%1'.":"Sélectionner les platines avec lesquelles synchroniser '%1'.",
 "Selected Genres":"Genres sélectionnés",
 "Server":"Serveur",
-"Server Settings":"Réglages du serveur",
 "Server connection lost...":"Perte de la connexion au serveur...",
 "Server settings":"Configuration du serveur",
 "Set Defaults":"Mémoriser",
