@@ -217,7 +217,6 @@
 "Select which players you would like to synchronise with '%1'.":"Selecteer de spelers die je wilt synchroniseren met '%1'",
 "Selected Genres":"Geselecteerde Genres",
 "Server":"Server",
-"Server Settings":"Server Instellingen",
 "Server connection lost...":"Server connectie verbroken...",
 "Server settings":"Server instellingen",
 "Set Defaults":"Bepaal Standaardwaarden",
