@@ -236,7 +236,6 @@
 "Select which players you would like to synchronise with '%1'.":"Какой плеер вы хотите синхронизировать с '%1'.",
 "Selected Genres":"Выбор жанра",
 "Server":"Сервер",
-"Server Settings":"Установки сервера",
 "Server connection lost...":"Соедеинение с сервером потеряно...",
 "Server is being restarted.":"Сервер перегружается",
 "Server settings":"Установки сервера",
