@@ -6,6 +6,7 @@
 4. When remapping icons, check object icon/icon-id property is a string.
 5. Fix broken expand now-playing button in desktop layout.
 6. Fix updating queue when remove a selection of tracks.
+7. Place 'Server settings' back into main menu.
 
 1.1.0
 -----
